--- a/style.css
+++ b/style.css
@@ -1,9 +1,53 @@
-header{
-   text-align: center;
+.header-def{
+   background-color: #222222;
+   padding-top: 25px;
+   padding-bottom: 25px;
+   padding-left: 25px;
+   padding-right: 25px;
+   margin: 0px;
+   font-size: 14pt;
+}
+img{
+    width: 200px;
+    float: right;
+}
+span{
+    margin: 0px;
+    float: left;
+    display: inline;
+    font-size: 14pt;
+    color : #598e30;
+    font-family: "Kaushan Script","Helvetica Neue", Helvetica, Arial, cursive;
+}
+
+.navbar-default li{
+  letter-spacing: 2px;
+  padding-left: 0px;
+  padding-top: 0px;
+  padding-right: 15px;
+  text-transform: uppercase;
+  font-size: 14pt;
+  float: left;
+}
+nav ul{
+    padding-left: 600px;
+    padding-right: 0px;
+    padding-bottom: 20px;
+    margin: 0px;
+    list-style: none;
+    display: list-item;
+}
+
+nav a{
+    text-decoration: none;
+    color: white;
+}
+nav a:hover{
+    color: #598e30;
 }
 body{
     color : #777;
-    margin: 90px;
+    margin: 0px;
     font-family: Roboto Slab, Helvetica neue, Helvetica, Arial, sans-serif;
 }
 
@@ -11,25 +55,17 @@ body{
     background-color: #f7f7f7;
 }
 
-a {
+.lienvert{
   color : #71b43d;
-}
-
-#text-decoration{
-  text-decoration: underline;
 }
 
 h1,h2,h4{
   color : #333;
 }
+h1 {
+  text-decoration: underline;
+}
 footer {
     padding: 25px 0;
     text-align: center;
-}
-ul {
-  list-style-image:url("http://www.starandco.com/images/puce_on.jpg");
-}
-img{
-    width: 200px;
-    float: right;
 }
