--- a/style.css
+++ b/style.css
@@ -1,16 +1,35 @@
 header{
    background-color: #222222;
-   padding-top: 30px;
-   padding-bottom: 30px;
-   padding-left: 30px;
-   padding-right: 30px;
+   padding:30px;
    margin: 0px;
    font-size: 14pt;
 }
-#photo{
-    width: 200px;
-
+.image, .encours{
+  display: inline-block;
 }
+.presentation{
+  text-align: center;
+}
+.apropo, .projets{
+float: left;
+width: 50%;
+text-align: center;
+}
+
+section{
+  padding:10px 0;
+}
+.section3{
+  list-style-type: none;
+  padding-bottom: 15px;
+  text-align: center;
+}
+
+.center{
+  width: 960px;
+  margin: auto;
+}
+
 span{
     margin: 0px;
     float: left;
@@ -50,11 +69,14 @@ body{
     color : #777;
     margin: 0px;
     font-family: Roboto Slab, Helvetica neue, Helvetica, Arial, sans-serif;
+
 }
+
 
 .bg-light-gray{
     background-color: #f7f7f7;
 }
+
 
 .lienvert{
   color : #71b43d;
@@ -96,4 +118,9 @@ footer {
 .trombisection{
   margin :auto;
   width: 960px
+}
+
+.zoomimage{
+  zoom : 150%;
+  -moz-transform: scale(2);
 }
