--- a/style.css
+++ b/style.css
@@ -93,6 +93,20 @@ footer {
     text-align: center;
 }
 
+/*contact*/
+.form {
+    /* Pour le centrer dans la page */
+    margin: 400px;
+    width: 400px;
+    /* Pour voir les limites du formulaire */
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+    color: #598e30;
+}
+form div + div {
+    margin-top: 2em;
+}
 
 
 /*trombinoscope css*/
