--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ header{
 .image, .encours{
   display: inline-block;
 }
+.imageprofil{
+  height: 200px;
+  width: 280px;
+}
 .presentation{
   text-align: center;
 }
@@ -57,6 +61,9 @@ nav ul{
     display: list-item;
 
 }
+ul{
+  padding: 0px;
+}
 
 nav a{
     text-decoration: none;
@@ -96,7 +103,7 @@ footer {
 /*contact*/
 .form {
     /* Pour le centrer dans la page */
-    margin: 400px;
+    margin: 0 auto;
     width: 400px;
     /* Pour voir les limites du formulaire */
     padding: 1em;
